[package]
name = "bevy_minesweeper"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]

[dependencies]
bevy = "0.7"
board_plugin = { path = "board_plugin" }

# Hierarchy inspector debug
bevy-inspector-egui = { version = "0.11", optional = true }
log = "0.4"

[workspace]
members = [
    "board_plugin"
]